# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  color.h  config.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
img/: example.ppm
